@@ -28,11 +28,6 @@
 ;; C-c C-s  Increment SOA serial.
 ;;          Understands YYYYMMDDNN, Unix time, and serial number formats,
 ;;          and complains if it fail to find SOA serial.
-;;
-;; Put something similar to the following in your ~/.emacs to use this file:
-;;
-;; (load "~/path/to/dns-mode.el")
-;; (setq auto-mode-alist (cons '("\\.soa\\'" . dns-mode) auto-mode-alist))
 
 ;;; References:
 
@@ -151,7 +146,6 @@ Turning on DNS mode runs `dns-mode-hook'."
   (easy-menu-add dns-mode-menu dns-mode-map))
 
 ;;;###autoload (defalias 'zone-mode 'dns-mode)
-;;;###autoload (add-to-list 'auto-mode-alist (purecopy '("\\.zone\\'" . zone-mode)))
 
 ;; Tools.
 
@@ -222,8 +216,6 @@ This function is run from `before-save-hook'."
     (progn (dns-mode-soa-increment-serial)
 	   ;; We return nil in case this is used in write-contents-functions.
 	   nil)))
-
-;;;###autoload(add-to-list 'auto-mode-alist (purecopy '("\\.soa\\'" . dns-mode)))
 
 (provide 'dns-mode)
 
